--- a/src/main/resources/templates/board/board_insert.html
+++ b/src/main/resources/templates/board/board_insert.html
@@ -2,104 +2,124 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
     <h1>게시판 등록</h1>
     <br>
     <br>
-    <table class="tg" style="border: 1px solid black; width: 1000px; height: 100%; text-align: center; ">
+    <table class="tg" style="border: 1px solid black; width: 450px; height: 100%;">
         <tr>
-            <th style="border: 1px solid black;" class="tg-0lax">이름</th>
-            <td><input type="text" id="name"></td>
+            <th style="border: 1px solid black; width: 80px; height: 30px;" class="tg-0lax" >이름</th>
+            <td><input type="text" id="name" style="width: 50%; height: 25px;"  placeholder="이름"></td>
         </tr>
         <tr>
-            <th style="border: 1px solid black;" class="tg-0lax">성별</th>
-            <td><input type="text" id="gender"></td>
+            <th style="border: 1px solid black; width: 80px; height: 30px;" class="tg-0lax">성별</th>
+            <td>
+                <select name="gender" id="gender" style="width: 40%; height: 28px;">
+                    <option value="none">===== 선택 =====</option>
+                    <option value="F">여성</option>
+                    <option value="M">남성</option>
+                </select>
+            </td>
         </tr>
         <tr>
-            <th style="border: 1px solid black;" class="tg-0lax">나이</th>
-            <td><input type="text" id="age"></td>
+            <th style="border: 1px solid black; width: 80px; height: 30px;" class="tg-0lax">나이</th>
+            <td><input type="text" id="age" style="width: 50%; height: 25px;" placeholder="나이"></td>
         </tr>
         <tr>
-            <input type="text" id="sample4_postcode" placeholder="우편번호">
-            <input type="button" th:onclick="sample4_execDaumPostcode()" value="우편번호 찾기"><br>
-            <input type="text" id="sample4_roadAddress" placeholder="도로명주소">
-            <input type="text" id="sample4_jibunAddress" placeholder="지번주소">
-            <span id="guide" style="color:#999;display:none"></span>
-            <input type="text" id="sample4_detailAddress" placeholder="상세주소">
-            <input type="text" id="sample4_extraAddress" placeholder="참고항목">
+            <th  style="border: 1px solid black;" class="tg-0lax" rowspan="2"><label>주소</label></th>
+            <td>
+                <input type="text" id="sample4_postcode" style="width: 50%; height: 25px;" placeholder="우편번호">
+                <button type="button" id="daumPostcode"  style="width: 20%; height: 30px;" class="button">주소검색</button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <input type="text" id="sample4_roadAddress" style="width: 98%; height: 25px; margin-bottom: 2px;" placeholder="도로명">
+                <span id="guide" style="color:#999; display:none"></span>
+                <input type="text" id="sample4_detailAddress" style="width: 98%; height: 25px;" placeholder="상세주소">
+            </td>
         </tr>
     </table>
     <br />
-    <div class="btn_wrap">
-        <button class="insertBtn" id="insertBtn">등록</button>
-        <button class="cancelBtn" id="cancelBtn">취소</button>
+    <div class="btn_wrap" style="margin-left: 180px;">
+        <button type="button" class="insertBtn" id="insertBtn">등록</button>
+        <button type="button" class="cancelBtn" id="cancelBtn">취소</button>
     </div>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script type="text/javascript">
-        new daum.Postcode({
-            oncomplete: function(data) {
-                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분입니다.
-                // 예제를 참고하여 다양한 활용법을 확인해 보세요.
-            }
-        }).open();
+
+        // 다음 주소 API
+        $("#daumPostcode").click(function (e) {
+            sample4_execDaumPostcode();
+        });
+
+        // 데이터 등록
+        $("#insertBtn").click(function (e) {
+            insertBoardList();
+        });
+
+        // 취소버튼 -> 게시판 리스트 페이지로 이동
+        $("#cancelBtn").click(function (e) {
+            window.location.href = "/board/board_main";
+        });
 
         function sample4_execDaumPostcode() {
             new daum.Postcode({
                 oncomplete: function(data) {
-                    // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
 
-                    // 도로명 주소의 노출 규칙에 따라 주소를 표시한다.
-                    // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
                     var roadAddr = data.roadAddress; // 도로명 주소 변수
-                    var extraRoadAddr = ''; // 참고 항목 변수
-
-                    // 법정동명이 있을 경우 추가한다. (법정리는 제외)
-                    // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
-                    if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
-                        extraRoadAddr += data.bname;
-                    }
-                    // 건물명이 있고, 공동주택일 경우 추가한다.
-                    if(data.buildingName !== '' && data.apartment === 'Y'){
-                        extraRoadAddr += (extraRoadAddr !== '' ? ', ' + data.buildingName : data.buildingName);
-                    }
-                    // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
-                    if(extraRoadAddr !== ''){
-                        extraRoadAddr = ' (' + extraRoadAddr + ')';
-                    }
 
                     // 우편번호와 주소 정보를 해당 필드에 넣는다.
                     document.getElementById('sample4_postcode').value = data.zonecode;
                     document.getElementById("sample4_roadAddress").value = roadAddr;
-                    document.getElementById("sample4_jibunAddress").value = data.jibunAddress;
-
-                    // 참고항목 문자열이 있을 경우 해당 필드에 넣는다.
-                    if(roadAddr !== ''){
-                        document.getElementById("sample4_extraAddress").value = extraRoadAddr;
-                    } else {
-                        document.getElementById("sample4_extraAddress").value = '';
-                    }
 
                     var guideTextBox = document.getElementById("guide");
-                    // 사용자가 '선택 안함'을 클릭한 경우, 예상 주소라는 표시를 해준다.
-                    if(data.autoRoadAddress) {
-                        var expRoadAddr = data.autoRoadAddress + extraRoadAddr;
-                        guideTextBox.innerHTML = '(예상 도로명 주소 : ' + expRoadAddr + ')';
-                        guideTextBox.style.display = 'block';
 
-                    } else if(data.autoJibunAddress) {
-                        var expJibunAddr = data.autoJibunAddress;
-                        guideTextBox.innerHTML = '(예상 지번 주소 : ' + expJibunAddr + ')';
-                        guideTextBox.style.display = 'block';
-                    } else {
-                        guideTextBox.innerHTML = '';
-                        guideTextBox.style.display = 'none';
-                    }
                 }
             }).open();
         }
 
+        function insertBoardList() {
+
+            let name = $('#name').val();
+            let gender = $("#gender option:selected").val();
+            let age = $('#age').val();
+            let address = $('#sample4_postcode').val() + " " + $('#sample4_roadAddress').val() + " " + $('#sample4_detailAddress').val();
+
+            if(gender == "none") {
+                alert("성별을 선택해주세요.");
+                return false;
+            }
+
+            let params = {
+                name : name,
+                gender : gender,
+                age : age,
+                address : address
+            }
+
+            $.ajax({
+                type: "POST",
+                url: "insertBoardList",
+                async: true,
+                dataType: 'json',
+                data: params,
+                success: function (res) {
+                    /*
+                    업체 등록에 성공했을 경우 : 만약 숫자만 들어가야하는 영역에 문자열을 넣었다거나, 필수입력항목을 채우지 않았을 경우엔 등록이 되지않고 retrun false 처리가 된다.
+                    (실패하는 것은 아니고 다시 맞게 입력 후 등록버튼을 누르면 정상 등록처리 완료.)
+                    */
+                    if (res.resultCode == "S001") {
+                        alert("새로운 업체 데이터 등록에 성공했습니다.")
+                        document.location.reload();
+                    } else {
+                        alert("업체 등록에 실패하였습니다.\n 에러발생 ::: " + "에러코드(" + res.resultCode + ")");
+                    }
+                }
+            });
+        }
     </script>
 </body>
 </html>
