--- a/src/main/resources/templates/board/board_main.html
+++ b/src/main/resources/templates/board/board_main.html
@@ -18,7 +18,11 @@
     <table class="tg" style="border: 1px solid black; width: 1000px; height: 100%; text-align: center; ">
         <thead>
         <tr>
-            <th style="border: 1px solid black;" class="tg-0pky">구분</th>
+            <th style="border: 1px solid black;" class="tg-0pky">
+                <label class="checkbox-inline">
+                    <input type="checkbox" id="allCheckBox" th:onclick="allChecked()">
+                </label>
+            </th>
             <th style="border: 1px solid black;" class="tg-0lax">번호</th>
             <th style="border: 1px solid black;" class="tg-0lax">이름</th>
             <th style="border: 1px solid black;" class="tg-0lax">성별</th>
@@ -37,6 +41,11 @@
         // 삭제
         $("#deleteBtn").click(function () {
 
+        });
+
+        // 체크박스
+        $("#chk").click(function () {
+            chkClicked();
         });
 
         function selectList() {
@@ -61,11 +70,10 @@
                             updateState = "수정 이력이 없습니다."
                         }
 
-                        console.log(updateState)
                         var Table =
                             '<tr>'
                             + '<td style="border: 1px solid black; width: 5%;" class="tg-0lax">'
-                            + '<input type="checkbox" name="checkValue" />'
+                            + '<input type="checkbox" name="chk" class="chk" onclick="chkClicked()"' + 'value="' + data.id + '"/>'
                             + '</td>'
                             + '<td style="border: 1px solid black;" class="tg-0lax">' + data.id + '</td>'
                             + '<td style="border: 1px solid black;" class="tg-0lax">' + data.name + '</td>'
@@ -82,8 +90,65 @@
                 }
             });
         }
-
         selectList();
+
+        //체크박스 전체 선택 클릭 이벤트
+        function allChecked(target){
+
+            //전체 체크박스 버튼
+            const checkbox = document.getElementById('allCheckBox');
+
+            //전체 체크박스 버튼 체크 여부
+            const is_checked = checkbox.checked;
+
+            //전체 체크박스 제외한 모든 체크박스
+            if(is_checked){
+                //체크박스 전체 체크
+                chkAllChecked()
+            }
+            else{
+                //체크박스 전체 해제
+                chkAllUnChecked()
+            }
+        }
+
+        //자식 체크박스 클릭 이벤트
+        function chkClicked(){
+
+            const deleteId = $(".chk").val();
+            console.log(deleteId)
+
+            //체크박스 전체개수
+            const allCount = document.querySelectorAll(".chk").length;
+
+            //체크된 체크박스 전체개수
+            const query = 'input[name="chk"]:checked'
+            const selectedElements = document.querySelectorAll(query)
+            const selectedElementsCnt = selectedElements.length;
+
+            //체크박스 전체개수와 체크된 체크박스 전체개수가 같으면 전체 체크박스 체크
+            if(allCount == selectedElementsCnt){
+                document.getElementById('allCheckBox').checked = true;
+            }
+            //같지않으면 전체 체크박스 해제
+            else{
+                document.getElementById('allCheckBox').checked = false;
+            }
+        }
+
+        //체크박스 전체 체크
+        function chkAllChecked(){
+            document.querySelectorAll(".chk").forEach(function(v, i) {
+                v.checked = true;
+            });
+        }
+
+        //체크박스 전체 체크 해제
+        function chkAllUnChecked(){
+            document.querySelectorAll(".chk").forEach(function(v, i) {
+                v.checked = false;
+            });
+        }
     </script>
 </body>
 </html>
